added and modified

--- a/index.html
+++ b/index.html
@@ -13,5 +13,15 @@
       width="500"
       height="700"
     ></iframe>
+
+    <br />
+    <br />
+
+    <object
+      data="https://www.africau.edu/images/default/sample.pdf"
+      type="application/pdf"
+      width="500"
+      height="700"
+    ></object>
   </body>
 </html>
