--- a/index.html
+++ b/index.html
@@ -23,5 +23,14 @@
       width="500"
       height="700"
     ></object>
+
+    <br />
+    <br />
+
+    <embed
+      src="https://www.africau.edu/images/default/sample.pdf"
+      width="500"
+      height="700"
+    />
   </body>
 </html>
