--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <iframe
-      src="https://www.africau.edu/images/default/sample.pdf"
+      src="https://docs.google.com/viewerng/viewer?url=https://www.africau.edu/images/default/sample.pdf"
       frameborder="2"
       width="500"
       height="700"
