--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <title>PDF</title>
   </head>
   <body>
-    <iframe
-      src="https://docs.google.com/viewerng/viewer?url=https://www.africau.edu/images/default/sample.pdf"
-      frameborder="2"
-      width="500"
-      height="700"
-    ></iframe>
+    <iframe src="sample1.pdf" frameborder="2" width="500" height="700"></iframe>
 
     <br />
     <br />
@@ -32,5 +27,10 @@
       width="500"
       height="700"
     />
+
+    <br />
+    <br />
+
+    <a href="https://www.africau.edu/images/default/sample.pdf">adb</a>
   </body>
 </html>
