--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PDF</title>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.3.122/pdf.min.js"
+      integrity="sha512-CGtesFWoCAxW8xV1S4wdev6uWmGhkEBtTGJsQLkT75ab0eVyx0RTOdGxHk9hFVV/OlF6ZyCoukfPdiZPpAiUtw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
   </head>
   <body>
     <iframe src="sample1.pdf" frameborder="2" width="500" height="700"></iframe>
@@ -31,6 +38,16 @@
     <br />
     <br />
 
-    <a href="https://www.africau.edu/images/default/sample.pdf">adb</a>
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/gNwsJJZ-LMc"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen
+    ></iframe>
+
+    <script></script>
   </body>
 </html>
