--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
     ></script>
   </head>
   <body>
-    <iframe src="sample1.pdf" frameborder="2" width="500" height="700"></iframe>
+    <iframe
+      src="sample1.pdf"
+      frameborder="2"
+      width="500"
+      height="700"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen
+    ></iframe>
 
     <br />
     <br />
