--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
     <br />
     <br />
 
-    <embed
-      src="https://www.africau.edu/images/default/sample.pdf"
-      width="500"
-      height="700"
-    />
+    <embed src="./sample1.pdf#toolbar=false" width="500" height="700" />
 
     <br />
     <br />
@@ -50,6 +46,34 @@
       allowfullscreen
     ></iframe>
 
-    <script></script>
+    <br />
+
+    <div id="adobe-dc-view" style="height: 360px; width: 500px"></div>
+
+    <script src="https://documentservices.adobe.com/view-sdk/viewer.js"></script>
+    <script type="text/javascript">
+      document.addEventListener("adobe_dc_view_sdk.ready", function () {
+        var adobeDCView = new AdobeDC.View({
+          clientId: "1",
+          divId: "adobe-dc-view",
+        });
+        adobeDCView.previewFile(
+          {
+            content: {
+              location: {
+                url: "https://documentservices.adobe.com/view-sdk-demo/PDFs/Bodea Brochure.pdf",
+              },
+            },
+            metaData: { fileName: "Bodea Brochure.pdf" },
+          },
+          {
+            embedMode: "FULL_WINDOW",
+            defaultViewMode: "FIT_PAGE",
+            showAnnotationTools: true,
+            showDownloadPDF: true,
+          }
+        );
+      });
+    </script>
   </body>
 </html>
